fix(frontend): resolve overflow issue in main app

--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -18,6 +18,7 @@ body {
             height: 80vh;
             background-color: var(--first-color);
             padding: 2rem;
+            overflow-y: auto;
         }
     }
 }
